# symergetics

./: README.md  pyproject.toml  run.py
docs/: advanced-topics-deep-dive.md  api-cookbook-recipes.md  case-studies-real-world-applications.md  contributor-development-guide.md  core-concept-guide.md  future-implications-research-directions.md  geometric-patterns-spatial-relationships.md  glossary-terminology.md  index.md  integration-guides-platforms.md  interdisciplinary-applications-synergetics.md  learning-theory-synergetics.md  mathematical-foundations-synergetics.md  performance-optimization-guide.md  synergetics-philosophy-education.md  test-architecture-summary.md  testing-guide.md  troubleshooting-faq.md
docs/api/: index.md
docs/architecture/: index.md
docs/examples/: index.md
docs/research/: index.md
docs/tutorials/: index.md
examples/: comprehensive_visualizations_demo.py  coordinate_systems_demo.py  geometric_mnemonics_demo.py  integration_demo.py  mathematical_patterns_demo.py  number_theory_demo.py  organized_output_demo.py  png_visualization_demo.py  symergetics_core_demo.py  visualization_demo.py
output/: demo_results.json  demo_summary.txt  ivm_lattice_size_3_ascii.txt  ivm_lattice_size_5_ascii.txt  orchestration_results.json  visualization_report_20250909_132551.txt  visualization_report_20250909_132553.txt  visualization_report_20250909_132637.txt  visualization_report_20250911_132706.txt  visualization_report_20250911_132715.txt  visualization_report_20250911_132735.txt  visualization_report_20250911_203511.txt  visualization_report_20250911_203522.txt  visualization_report_20250911_203541.txt
output/demos/: README.md
output/geometric/: README.md
output/reports/: README.md
paper/: INTEGRATION_GUIDE.md  QUICK_START.md  README.md  STYLE_GUIDE.md  generate_paper.py  improve_paper_visualizations.py  validation_report.md
paper/markdown/: 00_title.md  01_abstract.md  02_introduction.md  03_mathematical_foundations.md  04_system_architecture.md  05_computational_methods.md  06_geometric_applications.md  06_results.md  07_geometric_applications.md  07_pattern_discovery.md  08_pattern_discovery.md  08_research_applications.md  (+4 more)
symergetics/: __init__.py
tests/: README.md  TEST_INDEX.md  __init__.py  test_computation_analysis.py  test_computation_analysis_comprehensive.py  test_computation_geometric_mnemonics.py  test_computation_palindromes.py  test_computation_primorials.py  test_computation_primorials_coverage.py  test_core_comprehensive.py  test_core_constants.py  test_core_coordinates.py  test_core_extended.py  test_core_numbers.py  test_coverage_improvement.py  test_edge_cases_comprehensive.py  test_geometry_polyhedra.py  test_geometry_real.py  test_geometry_transformations.py  test_geometry_transformations_coverage.py  test_integration_comprehensive.py  test_mega_graphical_abstract.py  test_png_visualizations.py  test_utils_conversion.py  test_utils_extended.py  test_utils_mnemonics.py  test_utils_real.py  test_utils_reporting.py  test_visualization.py  test_visualization_advanced.py  test_visualization_comprehensive.py  test_visualization_geometry_comprehensive.py  test_visualization_geometry_coverage.py  test_visualization_init_comprehensive.py  test_visualization_init_coverage.py  test_visualization_mathematical_comprehensive.py  test_visualization_mathematical_coverage.py  test_visualization_methods.py  test_visualization_numbers_comprehensive.py  test_visualization_numbers_coverage.py  (+1 more)
(+131 files in other folders)
